# Responsible_ML_Capstone

./: .gitignore  README.md  hmda_responsible_ml_capstone.ipynb  pyproject.toml
data/: hmda_filtered_preview.csv
