[project]
name = "capstone"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dice-ml>=0.12",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=2.2,<3",
    "plotly>=6.7.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "solas-ai>=0.6.0",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]
